# oxidized-pixel-dungeon

./: Cargo.toml  README.md  clippy.toml
assets/original/interfaces/: button1.aseprite  dialogbox1.aseprite  ui-palette-1.aseprite
examples/: hero.rs  main_menu.rs  player.rs  ui.rs
src/: lib.rs  main.rs
src/control/: mod.rs
src/controller/: mod.rs
src/controller/conditions/: mod.rs
src/controller/systems/: mod.rs  movement.rs
src/core/: constants.rs  mod.rs
src/core/components/: character.rs  facing_direction.rs  mod.rs
src/core/resources/: game_config.rs  mod.rs
src/core/states/: app.rs  gameplay.rs  mod.rs
src/core/systems/: camera.rs  mod.rs
src/gameplay/: constants.rs  mod.rs
src/gameplay/resources/: game_time.rs  mod.rs
src/gameplay/states/: gameplay.rs  mod.rs
src/gameplay/systems/: action.rs  actions.rs  gameplay_state.rs  mod.rs  pancam.rs  sprite.rs
src/grid/: constants.rs  mod.rs
src/grid/components/: grid.rs  mod.rs
src/grid/systems/: mod.rs  movement.rs  paint.rs
src/mob/: mod.rs
src/mob/components/: hero.rs  mod.rs
src/mob/resources/: mob_assets.rs  mod.rs
src/mob/systems/: assets.rs  hero.rs  mod.rs  player.rs
src/player/: mod.rs
src/player/components/: mod.rs
src/player/systems/: mod.rs  position.rs
src/user_interface/: interactions.rs  mod.rs
src/user_interface/bundles/: button.rs  mod.rs
src/user_interface/components/: mod.rs
src/user_interface/resources/: mod.rs  user_interface_assets.rs
src/user_interface/states/: mod.rs
src/user_interface/systems/: checkbox.rs  main_menu.rs  mod.rs  (+1 more)
(+10 files in other folders)
