[package]
name = "oxidized-pixel-dungeon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.13.2"
bevy-inspector-egui = "0.24.0"
bevy_pancam = { version = "0.11.1", features = ["bevy_egui"] }
bevy_prototype_lyon = "0.11.0"
rayon = "1.10.0"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
